fixing spacing issues between bars in the graph

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -153,7 +153,7 @@ input:focus, textarea:focus {
 
 .barLabel {
   font-weight: bold;
-  font-size: 10px;
+  font-size: 8px;
 }
 
 .toolbarItem {
